# KeyRefit

./: .gitignore  README.md  build.bat  config.py  hook.py  key_names.md  main.py  pyproject.toml  vk_table.py
UI/keyrefit_ui/: index.html  package.json  pnpm-lock.yaml  vite.config.js
UI/keyrefit_ui/src/: App.vue  main.js
UI/keyrefit_ui/src/views/: MainLayout.vue
keyrefit_hook/: keyrefit_hook.sln
keyrefit_hook/keyrefit_hook/: dllmain.cpp  keyrefit_hook.vcxproj
keyrefit_hook/keyrefit_hook/x64/Debug/: keyrefit_hook.dll.recipe  keyrefit_hook.ilk  vc143.idb
keyrefit_hook/keyrefit_hook/x64/Debug/keyrefit_hook.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  keyrefit_hook.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
