[project]
name = "keyrefit"
version = "0.6.3"
description = "一个键位映射程序,可用于为不支持自定义键位的游戏提供支持"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.3.0",
    "pystray>=0.19.5",
    "pywebview>=5.4",
    "pywin32>=311",
    "rtoml>=0.12.0",
]
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
